src/parser_old.output
   0  $accept : %entry% $end

   1  program : tdecls lexprs EOF

   2  tdecls :
   3         | tdecls tdecl

   4  tdecl : TYPE TYPNAME ASSIGN type_expr

   5  type_expr : INT
   6            | BOOL
   7            | FLOAT
   8            | STRING
   9            | TYPNAME
  10            | adt_opt
  11            | LBRACE struct_decl_body RBRACE
  12            | type_expr LIST
  13            | type_expr STAR type_expr
  14            | param_type_expr
  15            | type_expr ARROW type_expr
  16            | type_expr GROUP
  17            | type_expr RING
  18            | type_expr FIELD
  19            | type_expr POLY
  20            | LPAREN type_expr RPAREN

  21  adt_opt : adt_type_expr
  22          | adt_type_expr BAR adt_opt

  23  adt_type_expr : ADTNAME
  24                | ADTNAME OF LPAREN type_expr RPAREN

  25  struct_decl_body : NAME COLON type_expr
  26                   | NAME COLON type_expr COMMA struct_decl_body

  27  param_type_expr : LBRACKET type_expr_list RBRACKET

  28  type_expr_list : type_expr
  29                 | type_expr COMMA type_expr_list

  30  lexprs : LET letand_opt lexprs
  31         | lexpr

  32  lexpr : LET letand_opt IN expr

  33  letand_opt : type_expr NAME ASSIGN expr
  34             | type_expr NAME ASSIGN expr LAND letand_opt

  35  expr : lexpr
  36       | LITERAL
  37       | FLIT
  38       | BLIT
  39       | STRINGLIT
  40       | LPAREN expr COMMA expr RPAREN
  41       | LBRACKET inside_list RBRACKET
  42       | expr CONS expr
  43       | CAR expr
  44       | CDR expr
  45       | NULL expr
  46       | NAME
  47       | expr PLUS expr
  48       | expr MINUS expr
  49       | expr STAR expr
  50       | expr DIVIDE expr
  51       | expr EQ expr
  52       | expr NEQ expr
  53       | expr LT expr
  54       | expr GT expr
  55       | expr LEQ expr
  56       | expr GEQ expr
  57       | expr AND expr
  58       | expr OR expr
  59       | expr MOD expr
  60       | MINUS expr
  61       | NOT expr
  62       | FUNCTION fn_def
  63       | expr expr
  64       | IF expr THEN expr ELSE expr END
  65       | GROUP LBRACE type_expr COMMA expr COMMA expr COMMA expr COMMA expr RBRACE
  66       | RING LBRACE type_expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr RBRACE
  67       | FIELD LBRACE type_expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr RBRACE
  68       | LBRACE struct_init_body RBRACE
  69       | NAME DOT NAME
  70       | PRINT expr
  71       | target_conc
  72       | LPAREN expr RPAREN

  73  fn_def : formals expr END
  74         | formals MATCH LPAREN var_list RPAREN WITH match_rule END

  75  formals : LPAREN formals_opt RPAREN

  76  formals_opt :
  77              | formal_list

  78  formal_list : type_expr NAME
  79              | formal_list type_expr NAME

  80  var_list : NAME
  81           | var_list COMMA NAME

  82  match_rule : match_line
  83             | match_line match_rule

  84  match_line : BAR LPAREN pattern RPAREN ARROW expr

  85  pattern : target_wild
  86          | target_wild COMMA pattern

  87  target_wild : ADTNAME
  88              | literal
  89              | ADTNAME LPAREN target_wild RPAREN
  90              | UNDERSCORE

  91  literal : LITERAL
  92          | FLIT
  93          | BLIT
  94          | STRINGLIT
  95          | NAME
  96          | LPAREN literal COMMA literal RPAREN

  97  target_conc : ADTNAME
  98              | ADTNAME LPAREN expr RPAREN

  99  struct_init_body : NAME ASSIGN expr
 100                   | NAME ASSIGN expr COMMA struct_init_body

 101  inside_list :
 102              | expr
 103              | expr COMMA inside_list

 104  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (104)
	tdecls : .  (2)

	.  reduce 2

	program  goto 3
	tdecls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (104)

	.  reduce 104


state 4
	program : tdecls . lexprs EOF  (1)
	tdecls : tdecls . tdecl  (3)

	LET  shift 5
	TYPE  shift 6
	.  error

	lexprs  goto 7
	tdecl  goto 8
	lexpr  goto 9


state 5
	lexprs : LET . letand_opt lexprs  (30)
	lexpr : LET . letand_opt IN expr  (32)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 19
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22
	letand_opt  goto 23


state 6
	tdecl : TYPE . TYPNAME ASSIGN type_expr  (4)

	TYPNAME  shift 24
	.  error


state 7
	program : tdecls lexprs . EOF  (1)

	EOF  shift 25
	.  error


state 8
	tdecls : tdecls tdecl .  (3)

	.  reduce 3


state 9
	lexprs : lexpr .  (31)

	.  reduce 31


state 10
	type_expr : LPAREN . type_expr RPAREN  (20)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 26
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22


state 11
	type_expr : LBRACE . struct_decl_body RBRACE  (11)

	NAME  shift 27
	.  error

	struct_decl_body  goto 28


state 12
	param_type_expr : LBRACKET . type_expr_list RBRACKET  (27)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 29
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22
	type_expr_list  goto 30


state 13
	type_expr : INT .  (5)

	.  reduce 5


state 14
	type_expr : BOOL .  (6)

	.  reduce 6


state 15
	type_expr : FLOAT .  (7)

	.  reduce 7


state 16
	type_expr : STRING .  (8)

	.  reduce 8


state 17
	adt_type_expr : ADTNAME .  (23)
	adt_type_expr : ADTNAME . OF LPAREN type_expr RPAREN  (24)

	OF  shift 31
	RPAREN  reduce 23
	RBRACE  reduce 23
	RBRACKET  reduce 23
	COMMA  reduce 23
	STAR  reduce 23
	ARROW  reduce 23
	GROUP  reduce 23
	RING  reduce 23
	FIELD  reduce 23
	POLY  reduce 23
	LET  reduce 23
	TYPE  reduce 23
	BAR  reduce 23
	LIST  reduce 23
	NAME  reduce 23


state 18
	type_expr : TYPNAME .  (9)

	.  reduce 9


state 19
	type_expr : type_expr . LIST  (12)
	type_expr : type_expr . STAR type_expr  (13)
	type_expr : type_expr . ARROW type_expr  (15)
	type_expr : type_expr . GROUP  (16)
	type_expr : type_expr . RING  (17)
	type_expr : type_expr . FIELD  (18)
	type_expr : type_expr . POLY  (19)
	letand_opt : type_expr . NAME ASSIGN expr  (33)
	letand_opt : type_expr . NAME ASSIGN expr LAND letand_opt  (34)

	STAR  shift 32
	ARROW  shift 33
	GROUP  shift 34
	RING  shift 35
	FIELD  shift 36
	POLY  shift 37
	LIST  shift 38
	NAME  shift 39
	.  error


state 20
	type_expr : adt_opt .  (10)

	.  reduce 10


state 21
	type_expr : param_type_expr .  (14)

	.  reduce 14


state 22
	adt_opt : adt_type_expr .  (21)
	adt_opt : adt_type_expr . BAR adt_opt  (22)

	BAR  shift 40
	RPAREN  reduce 21
	RBRACE  reduce 21
	RBRACKET  reduce 21
	COMMA  reduce 21
	STAR  reduce 21
	ARROW  reduce 21
	GROUP  reduce 21
	RING  reduce 21
	FIELD  reduce 21
	POLY  reduce 21
	LET  reduce 21
	TYPE  reduce 21
	LIST  reduce 21
	NAME  reduce 21


state 23
	lexprs : LET letand_opt . lexprs  (30)
	lexpr : LET letand_opt . IN expr  (32)

	LET  shift 5
	IN  shift 41
	.  error

	lexprs  goto 42
	lexpr  goto 9


state 24
	tdecl : TYPE TYPNAME . ASSIGN type_expr  (4)

	ASSIGN  shift 43
	.  error


state 25
	program : tdecls lexprs EOF .  (1)

	.  reduce 1


state 26
	type_expr : type_expr . LIST  (12)
	type_expr : type_expr . STAR type_expr  (13)
	type_expr : type_expr . ARROW type_expr  (15)
	type_expr : type_expr . GROUP  (16)
	type_expr : type_expr . RING  (17)
	type_expr : type_expr . FIELD  (18)
	type_expr : type_expr . POLY  (19)
	type_expr : LPAREN type_expr . RPAREN  (20)

	RPAREN  shift 44
	STAR  shift 32
	ARROW  shift 33
	GROUP  shift 34
	RING  shift 35
	FIELD  shift 36
	POLY  shift 37
	LIST  shift 38
	.  error


state 27
	struct_decl_body : NAME . COLON type_expr  (25)
	struct_decl_body : NAME . COLON type_expr COMMA struct_decl_body  (26)

	COLON  shift 45
	.  error


state 28
	type_expr : LBRACE struct_decl_body . RBRACE  (11)

	RBRACE  shift 46
	.  error


state 29
	type_expr : type_expr . LIST  (12)
	type_expr : type_expr . STAR type_expr  (13)
	type_expr : type_expr . ARROW type_expr  (15)
	type_expr : type_expr . GROUP  (16)
	type_expr : type_expr . RING  (17)
	type_expr : type_expr . FIELD  (18)
	type_expr : type_expr . POLY  (19)
	type_expr_list : type_expr .  (28)
	type_expr_list : type_expr . COMMA type_expr_list  (29)

	COMMA  shift 47
	STAR  shift 32
	ARROW  shift 33
	GROUP  shift 34
	RING  shift 35
	FIELD  shift 36
	POLY  shift 37
	LIST  shift 38
	RBRACKET  reduce 28


state 30
	param_type_expr : LBRACKET type_expr_list . RBRACKET  (27)

	RBRACKET  shift 48
	.  error


state 31
	adt_type_expr : ADTNAME OF . LPAREN type_expr RPAREN  (24)

	LPAREN  shift 49
	.  error


state 32
	type_expr : type_expr STAR . type_expr  (13)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 50
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22


state 33
	type_expr : type_expr ARROW . type_expr  (15)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 51
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22


state 34
	type_expr : type_expr GROUP .  (16)

	.  reduce 16


state 35
	type_expr : type_expr RING .  (17)

	.  reduce 17


state 36
	type_expr : type_expr FIELD .  (18)

	.  reduce 18


state 37
	type_expr : type_expr POLY .  (19)

	.  reduce 19


state 38
	type_expr : type_expr LIST .  (12)

	.  reduce 12


state 39
	letand_opt : type_expr NAME . ASSIGN expr  (33)
	letand_opt : type_expr NAME . ASSIGN expr LAND letand_opt  (34)

	ASSIGN  shift 52
	.  error


state 40
	adt_opt : adt_type_expr BAR . adt_opt  (22)

	ADTNAME  shift 17
	.  error

	adt_opt  goto 53
	adt_type_expr  goto 22


state 41
	lexpr : LET letand_opt IN . expr  (32)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 76
	target_conc  goto 77


state 42
	lexprs : LET letand_opt lexprs .  (30)

	.  reduce 30


state 43
	tdecl : TYPE TYPNAME ASSIGN . type_expr  (4)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 78
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22


state 44
	type_expr : LPAREN type_expr RPAREN .  (20)

	.  reduce 20


state 45
	struct_decl_body : NAME COLON . type_expr  (25)
	struct_decl_body : NAME COLON . type_expr COMMA struct_decl_body  (26)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 79
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22


state 46
	type_expr : LBRACE struct_decl_body RBRACE .  (11)

	.  reduce 11


state 47
	type_expr_list : type_expr COMMA . type_expr_list  (29)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 29
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22
	type_expr_list  goto 80


state 48
	param_type_expr : LBRACKET type_expr_list RBRACKET .  (27)

	.  reduce 27


state 49
	adt_type_expr : ADTNAME OF LPAREN . type_expr RPAREN  (24)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 81
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22


state 50
	type_expr : type_expr . LIST  (12)
	type_expr : type_expr . STAR type_expr  (13)
	type_expr : type_expr STAR type_expr .  (13)
	type_expr : type_expr . ARROW type_expr  (15)
	type_expr : type_expr . GROUP  (16)
	type_expr : type_expr . RING  (17)
	type_expr : type_expr . FIELD  (18)
	type_expr : type_expr . POLY  (19)

	.  reduce 13


state 51
	type_expr : type_expr . LIST  (12)
	type_expr : type_expr . STAR type_expr  (13)
	type_expr : type_expr . ARROW type_expr  (15)
	type_expr : type_expr ARROW type_expr .  (15)
	type_expr : type_expr . GROUP  (16)
	type_expr : type_expr . RING  (17)
	type_expr : type_expr . FIELD  (18)
	type_expr : type_expr . POLY  (19)

	STAR  shift 32
	ARROW  shift 33
	GROUP  shift 34
	RING  shift 35
	FIELD  shift 36
	POLY  shift 37
	LIST  shift 38
	RPAREN  reduce 15
	RBRACE  reduce 15
	RBRACKET  reduce 15
	COMMA  reduce 15
	LET  reduce 15
	TYPE  reduce 15
	NAME  reduce 15


state 52
	letand_opt : type_expr NAME ASSIGN . expr  (33)
	letand_opt : type_expr NAME ASSIGN . expr LAND letand_opt  (34)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 82
	target_conc  goto 77


state 53
	adt_opt : adt_type_expr BAR adt_opt .  (22)

	.  reduce 22


state 54
	expr : LPAREN . expr COMMA expr RPAREN  (40)
	expr : LPAREN . expr RPAREN  (72)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 83
	target_conc  goto 77


state 55
	expr : LBRACE . struct_init_body RBRACE  (68)

	NAME  shift 84
	.  error

	struct_init_body  goto 85


state 56
	expr : LBRACKET . inside_list RBRACKET  (41)
	inside_list : .  (101)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	RBRACKET  reduce 101

	lexpr  goto 75
	expr  goto 86
	inside_list  goto 87
	target_conc  goto 77


state 57
	expr : MINUS . expr  (60)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 88
	target_conc  goto 77


state 58
	expr : NOT . expr  (61)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 89
	target_conc  goto 77


state 59
	expr : CAR . expr  (43)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 90
	target_conc  goto 77


state 60
	expr : CDR . expr  (44)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 91
	target_conc  goto 77


state 61
	expr : NULL . expr  (45)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 92
	target_conc  goto 77


state 62
	expr : GROUP . LBRACE type_expr COMMA expr COMMA expr COMMA expr COMMA expr RBRACE  (65)

	LBRACE  shift 93
	.  error


state 63
	expr : RING . LBRACE type_expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr RBRACE  (66)

	LBRACE  shift 94
	.  error


state 64
	expr : FIELD . LBRACE type_expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr COMMA expr RBRACE  (67)

	LBRACE  shift 95
	.  error


state 65
	lexpr : LET . letand_opt IN expr  (32)

	LPAREN  shift 10
	LBRACE  shift 11
	LBRACKET  shift 12
	INT  shift 13
	BOOL  shift 14
	FLOAT  shift 15
	STRING  shift 16
	ADTNAME  shift 17
	TYPNAME  shift 18
	.  error

	type_expr  goto 19
	adt_opt  goto 20
	param_type_expr  goto 21
	adt_type_expr  goto 22
	letand_opt  goto 96


state 66
	expr : IF . expr THEN expr ELSE expr END  (64)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 97
	target_conc  goto 77


state 67
	expr : PRINT . expr  (70)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	MINUS  shift 57
	NOT  shift 58
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	LET  shift 65
	IF  shift 66
	PRINT  shift 67
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	.  error

	lexpr  goto 75
	expr  goto 98
	target_conc  goto 77


state 68
	expr : FUNCTION . fn_def  (62)

	LPAREN  shift 99
	.  error

	fn_def  goto 100
	formals  goto 101


state 69
	expr : LITERAL .  (36)

	.  reduce 36


state 70
	expr : BLIT .  (38)

	.  reduce 38


state 71
	expr : NAME .  (46)
	expr : NAME . DOT NAME  (69)

	DOT  shift 102
	LPAREN  reduce 46
	RPAREN  reduce 46
	LBRACE  reduce 46
	RBRACE  reduce 46
	LBRACKET  reduce 46
	RBRACKET  reduce 46
	COMMA  reduce 46
	PLUS  reduce 46
	MINUS  reduce 46
	STAR  reduce 46
	DIVIDE  reduce 46
	MOD  reduce 46
	EQ  reduce 46
	NEQ  reduce 46
	LT  reduce 46
	LEQ  reduce 46
	GT  reduce 46
	GEQ  reduce 46
	AND  reduce 46
	OR  reduce 46
	NOT  reduce 46
	CONS  reduce 46
	CAR  reduce 46
	CDR  reduce 46
	NULL  reduce 46
	GROUP  reduce 46
	RING  reduce 46
	FIELD  reduce 46
	LET  reduce 46
	IN  reduce 46
	LAND  reduce 46
	IF  reduce 46
	THEN  reduce 46
	ELSE  reduce 46
	BAR  reduce 46
	PRINT  reduce 46
	FUNCTION  reduce 46
	END  reduce 46
	LITERAL  reduce 46
	BLIT  reduce 46
	NAME  reduce 46
	ADTNAME  reduce 46
	FLIT  reduce 46
	STRINGLIT  reduce 46
	EOF  reduce 46


state 72
	target_conc : ADTNAME .  (97)
	target_conc : ADTNAME . LPAREN expr RPAREN  (98)

	LPAREN  shift 103
	RPAREN  reduce 97
	LBRACE  reduce 97
	RBRACE  reduce 97
	LBRACKET  reduce 97
	RBRACKET  reduce 97
	COMMA  reduce 97
	PLUS  reduce 97
	MINUS  reduce 97
	STAR  reduce 97
	DIVIDE  reduce 97
	MOD  reduce 97
	EQ  reduce 97
	NEQ  reduce 97
	LT  reduce 97
	LEQ  reduce 97
	GT  reduce 97
	GEQ  reduce 97
	AND  reduce 97
	OR  reduce 97
	NOT  reduce 97
	CONS  reduce 97
	CAR  reduce 97
	CDR  reduce 97
	NULL  reduce 97
	GROUP  reduce 97
	RING  reduce 97
	FIELD  reduce 97
	LET  reduce 97
	IN  reduce 97
	LAND  reduce 97
	IF  reduce 97
	THEN  reduce 97
	ELSE  reduce 97
	BAR  reduce 97
	PRINT  reduce 97
	FUNCTION  reduce 97
	END  reduce 97
	LITERAL  reduce 97
	BLIT  reduce 97
	NAME  reduce 97
	ADTNAME  reduce 97
	FLIT  reduce 97
	STRINGLIT  reduce 97
	EOF  reduce 97


state 73
	expr : FLIT .  (37)

	.  reduce 37


state 74
	expr : STRINGLIT .  (39)

	.  reduce 39


state 75
	expr : lexpr .  (35)

	.  reduce 35


state 76
	lexpr : LET letand_opt IN expr .  (32)
	expr : expr . CONS expr  (42)
	expr : expr . PLUS expr  (47)
	expr : expr . MINUS expr  (48)
	expr : expr . STAR expr  (49)
	expr : expr . DIVIDE expr  (50)
	expr : expr . EQ expr  (51)
	expr : expr . NEQ expr  (52)
	expr : expr . LT expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GEQ expr  (56)
	expr : expr . AND expr  (57)
	expr : expr . OR expr  (58)
	expr : expr . MOD expr  (59)
	expr : expr . expr  (63)

	LPAREN  shift 54
	LBRACE  shift 55
	LBRACKET  shift 56
	PLUS  shift 104
	MINUS  shift 105
	STAR  shift 106
	DIVIDE  shift 107
	MOD  shift 108
	EQ  shift 109
	NEQ  shift 110
	LT  shift 111
	LEQ  shift 112
	GT  shift 113
	GEQ  shift 114
	AND  shift 115
	OR  shift 116
	NOT  shift 58
	CONS  shift 117
	CAR  shift 59
	CDR  shift 60
	NULL  shift 61
	GROUP  shift 62
	RING  shift 63
	FIELD  shift 64
	IF  shift 66
	FUNCTION  shift 68
	LITERAL  shift 69
	BLIT  shift 70
	NAME  shift 71
	ADTNAME  shift 72
	FLIT  shift 73
	STRINGLIT  shift 74
	RPAREN  reduce 32
	RBRACE  reduce 32
	RBRACKET  reduce 32
	COMMA  reduce 32
	IN  reduce 32
	LAND  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	BAR  reduce 32
	END  reduce 32
	EOF  reduce 32

	lexpr  goto 75
	expr  goto 118
	target_conc  goto 77


state 77
	expr : target_conc .  (71)

	.  reduce 71


state 78
	tdecl : TYPE TYPNAME ASSIGN type_expr .  (4)
	type_expr : type_expr . LIST  (12)
	type_expr : type_expr . STAR type_expr  (13)
	type_expr : type_expr . ARROW type_expr  (15)
	type_expr : type_expr . GROUP  (16)
	type_expr : type_expr . RING  (17)
	type_expr : type_expr . FIELD  (18)
	type_expr : type_expr . POLY  (19)

	STAR  shift 32
	ARROW  shift 33
	GROUP  shift 34
	RING  shift 35
	FIELD  shift 36
	POLY  shift 37
	LIST  shift 38
	LET  reduce 4
	TYPE  reduce 4


state 79
	type_expr : type_expr . LIST  (12)
	type_expr : type_expr . STAR type_expr  (13)
	type_expr : type_expr . ARROW type_expr  (15)
	type_expr : type_expr . GROUP  (16)
	type_expr : type_expr . RING  (17)
	type_expr : type_expr . FIELD  (18)
	type_expr : type_expr . POLY  (19)
	struct_decl_body : NAME COLON type_expr .  (25)
	struct_decl_body : NAME COLON type_expr . COMMA struct_decl_body  (26)

	COMMA  shift 119
	STAR  shift 32
	ARROW  shift 33
	GROUP  shift 34
	RING  shift 35
	FIELD  shift 36
	POLY  shift 37
	LIST  shift 38
	RBRACE  reduce 25


state 80
	type_expr_list : type_expr COMMA type_expr_list .  (29)

	.  reduce 29


state 81
	type_expr : type_expr . LIST  (12)
	type_expr : type_expr . STAR type_expr  (13)
	type_expr : type_expr . ARROW type_expr  (15)
	type_expr : type_expr . GROUP  (16)
	type_expr : type_expr . RING  (17)
	type_expr : type_expr . FIELD  (18)
	type_expr : type_expr . POLY  (19)
	adt_type_expr : ADTNAME OF LPAREN type_expr . RPAREN  (24)

	RPAREN  shift 120
	STAR  shift 32
	ARROW  shift 33
	GROUP  shift 34
	RING  shift 35
	FIELD  shift 36
	POLY  shift 37
	LIST  shift 38
	.  error


state 82
	letand_opt : type_expr NAME ASSIGN expr .  (33)
	letand_opt : type_expr NAME ASSIGN expr . LAND letand_opt  (34)
	expr : expr . CONS expr  (42)
	expr : expr . PLUS expr  (47)
	expr : expr . MINUS expr  (48)
	expr : expr . STAR expr  (49)
	expr : expr . DIVIDE expr  (50)
	expr : expr . EQ expr  (51)
	expr : expr . NEQ expr  (52)
	expr : expr . LT expr  (53)
	expr : expr . GT expr  (54)
	expr : expr . LEQ expr  (55)
	expr : expr . GEQ expr  (56)
	expr : expr . AND expr  (57)
	expr : expr . OR expr  (58)
	expr : expr . MOD expr  (59)
	expr : expr . expr  (63)
